--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,21 @@
 body {
-  margin: 0;
+  margin: 0px 0px 0px 0px;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  height: 100%;
 }
 
 .dashboard {
   background: #001935;
   color: silver;
-  height: 100%;
+  height: 100vh;
+}
+
+.dashboard>*{
+  display: grid;
+  position: absolute;
 }
