--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,7 @@ body {
   color: silver;
   min-height: 100vh;
 width: 100%;
+display: flex;
 }
 
 .post-maker{
@@ -30,6 +31,8 @@ position: relative;
 }
 
 .sidebar{
-  /* display: flex; */
-  margin-left: 80%
+  flex: 1;
+  flex-grow: 1;
+  flex-shrink: 1;
+  flex-basis: 0%;
 }
