--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,14 @@ width: 100%;
 display: flex;
 }
 
+.centre-wrapper {
+  align-items: flex-end;
+  display: flex;
+  flex-direction: column;
+  max-width: 625px;
+  width: 100%;
+}
+
 .post-maker{
   align-items: center;
 background: white;
